--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>New Book</h1>
+<%= form_for @book, url: book_path, method: :put do |f| %>
+	<h4>title</h4>
+	<%= f.text_field :title %>
+	<h4>body</h4>
+	<%= f.text_area :body %>
+	<%= f.submit 'Update Book' %>
+<% end %>
+<p><%= link_to 'Show', book_path(@book) %>|<%= link_to "戻る", :back %></p>
