--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>Books</h1>
+<table>
+	<tr>
+		<th>title</th>
+		<th>body</th>
+	</tr>
+	<% @books.each do |book| %>
+		<tr>
+			<td><%= book.title %></td>
+			<td><%= book.body %></td>
+			<td><%= link_to 'show', book_path(book) %></td>
+			<td><%= link_to 'edit', edit_book_path(book) %></td>
+		<tr>
+	<% end %>
+</table>
+<h2>New Book</h2>
+<%= form_for @book, url: books_path, method: :post do |f| %>
+	<h4>title</h4>
+	<%= f.text_field :title %>
+	<h4>body</h4>
+	<%= f.text_area :body %>
+	<%= f.submit 'Create Book' %>
+<% end %>
